--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.seleniumhq.selenium:selenium-java:3.5.3'
+    compile 'org.testng:testng:6.9.6'
 }
