--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.seleniumhq.selenium:selenium-java:3.5.3'
     compile 'org.testng:testng:6.9.6'
+    compile 'log4j:log4j:1.2.17'
+
 }
