--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,6 @@ test {
     useTestNG() {
         outputDirectory = file("build/testngOutput")
         useDefaultListeners = true
-        suites 'regression.xml'
+        suites 'apitest.xml'
     }
 }
