--- a/build.gradle
+++ b/build.gradle
@@ -76,8 +76,8 @@ test {
 
 test {
     useTestNG() {
-        outputDirectory = file("build/testngOutput")
+//        outputDirectory = file("build/testngOutput")
         useDefaultListeners = true
-        suites 'apitest.xml'
+        suites 'regression.xml'
     }
 }
